examples/test/testpolicy16255.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16255
  namespace: namespace82
spec:
  podSelector:
    matchLabels:
      key41: value20
      key30: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value35
          key21: value15
      podSelector:
        matchLabels:
          key25: value15
          key5: value19
          key45: value10
